--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 load("//:constants.bzl", "GO_PREFIX")
@@ -19,4 +20,17 @@ goimports(
     display_diffs = True,
     prefix = GO_PREFIX,
     write = True,
+)
+
+go_library(
+    name = "go_default_library",
+    srcs = ["main.go"],
+    importpath = "github.com/rickypai/img-bench",
+    visibility = ["//visibility:private"],
+)
+
+go_binary(
+    name = "img-bench",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
 )
